[package]
name = "tc_nominatim"
version = "0.2.0"
edition = "2021"
authors = ["Cristian Giehl <cristiangiehl@gmail.com>"]
repository = "https://github.com/Table-Connect/nominatim-rs"
documentation = "https://docs.rs/nominatim"
description = "Bindings to the reverse geocoding API powered by openstreetmap."
keywords = ["async", "coordinates", "nominatim", "geocoding", "location"]
categories = ["api-bindings", "asynchronous"]
license = "MIT"

[features]
default = ["reqwest/default-tls"]
rustls = ["reqwest/rustls-tls"]

[dependencies]
reqwest = { version = "0.11", features = ["json"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
url = "2.4"
urlencoding = "2.1"


[dev-dependencies]
tokio = { version = "1.20", features = ["full"] }
